--- a/build.gradle
+++ b/build.gradle
@@ -34,8 +34,8 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-webflux')
     compile('org.springframework.boot:spring-boot-starter-data-mongodb-reactive')
     compileOnly('org.projectlombok:lombok')
+    annotationProcessor 'org.projectlombok:lombok:1.18.6'
     compile('de.flapdoodle.embed:de.flapdoodle.embed.mongo')
-
     testCompile('org.springframework.boot:spring-boot-starter-test')
     testCompile('io.projectreactor:reactor-test')
 }
